Enhance ConfigManager+ with new features and documentation
- Updated solution file to include README.md and "Solution Items".
- Added usage example in Class1.cs for ConfigManagerPlus.
- Modified project file to target net8.0 and net9.0, added package metadata.
- Created README.md with detailed library information and usage instructions.
- Introduced ConfigChangedEventArgs to encapsulate configuration changes.
- Updated ConfigLayer to represent configuration source layers with watchers.
- Enhanced ConfigManager with methods for various configuration sources.
- Added new configuration provider classes for JSON, YAML, INI, and environment files.
- Introduced SectionView for structured access to nested configuration sections.
- Added PassthroughProvider for dynamic sources without file support.
- Improved overall structure for hot reloading and robust API access.

--- a/ConfigManager+/ConfigManager+.csproj
+++ b/ConfigManager+/ConfigManager+.csproj
@@ -1,10 +1,40 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>ConfigManager_</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<!-- Target multiple frameworks if you want wide compatibility -->
+		<TargetFrameworks>net8.0</TargetFrameworks>
+
+		<!-- Package information -->
+		<PackageId>ConfigManagerPlus</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>BenSowieja</Authors>
+		<Product>ConfigManagerPlus</Product>
+		<Description>A flexible and lightweight configuration manager for .NET with JSON, YAML, INI, .env support, hot reload, environment and CLI overrides.</Description>
+		<PackageTags>configuration config json yaml ini dotenv env cli</PackageTags>
+		<RepositoryUrl>https://github.com/TristanAtze/ConfigManagerPlus</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/TristanAtze/ConfigManagerPlus</PackageProjectUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+
+		<!-- NuGet build settings -->
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+
+		<!-- Build options -->
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<LangVersion>latest</LangVersion>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<!-- Optional: if you later want YAML via YamlDotNet instead of minimal parser -->
+		<!-- <PackageReference Include="YamlDotNet" Version="15.1.2" /> -->
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="" />
+	</ItemGroup>
 
 </Project>
